changed div to buttons

--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
     <div class="plot">
 
         <div class="letters-container">
-            <div class="letterA">A</div>
-            <div class="letterB">B</div>
-            <div class="letterC">C</div>
-            <div class="letterD">D</div>
-            <div class="letterE">E</div>
-            <div class="letterF">F</div>
-            <div class="letterG">G</div>
-            <div class="letterH">H</div>
-            <div class="letterI">I</div>
-            <div class="letterJ">J</div>
-            <div class="letterK">K</div>
-            <div class="letterL">L</div>
-            <div class="letterM">M</div>
-            <div class="letterN">N</div>
-            <div class="letterO">O</div>
-            <div class="letterP">P</div>
-            <div class="letterQ">Q</div>
-            <div class="letterR">R</div>
-            <div class="letterS">S</div>
-            <div class="letterT">T</div>
-            <div class="letterU">U</div>
-            <div class="letterV">V</div>
-            <div class="letterW">W</div>
-            <div class="letterX">X</div>
-            <div class="letterY">Y</div>
-            <div class="letterZ">Z</div>
+            <button class="letter">A</button>
+            <button class="letter">B</button>
+            <button class="letter">C</button>
+            <button class="letter">D</button>
+            <button class="letter">E</button>
+            <button class="letter">F</button>
+            <button class="letter">G</button>
+            <button class="letter">H</button>
+            <button class="letter">I</button>
+            <button class="letter">J</button>
+            <button class="letter">K</button>
+            <button class="letter">L</button>
+            <button class="letter">M</button>
+            <button class="letter">N</button>
+            <button class="letter">O</button>
+            <button class="letter">P</button>
+            <button class="letter">Q</button>
+            <button class="letter">R</button>
+            <button class="letter">S</button>
+            <button class="letter">T</button>
+            <button class="letter">U</button>
+            <button class="letter">V</button>
+            <button class="letter">W</button>
+            <button class="letter">X</button>
+            <button class="letter">Y</button>
+            <button class="letter">Z</button>
         </div>
         
         <div class="game-state">
