functions and button, trying to add the logic

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
         
         
-        <button class="shapes">Shapes</button>
+        <button class="shapes" data-category="shapes">Shapes</button>
         <button class="again">Play Again</button>
-        <button class="animals">Animals</button>
-        <button class="colors">Colors</button>
+        <button class="animals" data-category="animals">Animals</button>
+        <button class="colors" data-category="colors">Colors</button>
     </div>
 </div>
 </body>
