--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <div class="column">
 
             <div id="spacemanContainer">
-                <img id="spacemanImage">
+                <img id="spacemanImage" src="" alt="Spaceman" />
+
               </div>
               
             <div class="lives">Lives Remaining:</div>
